--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ img {
 .wrapper {
   display: flex;
   flex-wrap: wrap;
-  width: 960px;
+  width: 940px;
   margin: 0 auto;
   justify-content: space-between;
 }
@@ -112,6 +112,7 @@ header {
 
 .wrapper--nowrap {
   display: flex;
+  flex-wrap: nowrap;
   justify-content: space-between;
 }
 
@@ -119,7 +120,7 @@ header {
 .logo__title {
   display: block;
   width: 220px;
-  padding: 12px;
+  padding: 10px 0;
   font-size: 24px;
   line-height: 24px;
   font-weight: 400;
@@ -131,20 +132,28 @@ header {
 }
 
 .top-menu__search {
-  margin-left: 19px;
-  margin-top: 16px;
-  margin-bottom: 16px;
+  margin-left: 14px;
+  margin-top: 13px;
+}
+
+.form-search {
+  width: 260px;
 }
 
 .form-search__name {
-  padding-left: 30px;
   font-size: 17px;
   line-height: 18px;
   font-weight: 400;
   color: #ffffff;
 }
 
+.form-search__name span {
+  padding-right: 10px;
+  opacity: 0.3;
+}
+
 .form-search__input {
+  width: 140px;
   margin-left: 10px;
   color: #ffffff;
   background: #293449;
@@ -164,7 +173,8 @@ header {
 }
 
 .top-menu__cart-item {
-  padding: 12px 0 15px;
+  width: 130px;
+  padding-top: 13px;
   font-size: 17px;
   line-height: 18px;
   font-weight: 400;
@@ -173,8 +183,11 @@ header {
 }
 
 .top-menu__cart-item:nth-child(2) {
-  margin-left: 45px;
-  margin-right: 30px;
+  width: 151px;
+}
+
+.top-menu__cart-item--color {
+  background: #ee3643;
 }
 
 .top-menu__cart-item:last-child {
@@ -183,29 +196,157 @@ header {
 }
 
 .top-menu__cart-item-link span {
-  margin-left: 5px;
+  margin-right: 14px;
+  opacity: 0.3;
 }
 
 .user-menu {
   display: flex;
+  margin-top: 46px;
+  margin-bottom: 26px;
   justify-content: space-between;
 }
 
-.user-menu__login-info-item {
+.user-menu__slogan {
+  width: 320px;
+}
+
+.user-menu__slogan-text {
+  width: 196px;
+  margin-left: 52px;
+  margin-top: 0;
   font-size: 16px;
-  line-height: 18px;
+  line-height: 23px;
+  font-weight: 400;
+  font-style: italic;
+  color: #ee3643;
+}
+
+.user-menu__contacts {
+  width: 271px;
+}
+
+.user-menu__contacts-tel {
+  margin: 0;
+  padding: 6px 0;
+  font-size: 21px;
+  font-weight: 400;
+  color: #e9292a;
+  border: 4px solid #ffffff;
+  box-sizing: border-box;
+}
+
+.user-menu__contacts-tel span {
+  padding-right: 41px;
+  color: #bbc3cb;
+}
+
+.user-menu__contacts-adress {
+  margin: 0;
+  padding-top: 4px;
+  padding-left: 9px;
+  font-size: 14px;
+  line-height: 24px;
   font-weight: 400;
   color: #32425c;
 }
 
+.user-menu__login {
+  width: 299px;
+  margin-left: 51px;
+}
+
+.user-menu__login-enter {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.user-menu__login-enter-link {
+  width: 121px;
+  padding: 9px 0 12px 7px;
+  font-size: 21px;
+  font-weight: 400;
+  color: #000000;
+  background: #ffffff;
+  box-sizing: border-box;
+}
+
+.user-menu__login-enter-link:last-child {
+  width: 151px;
+  margin-left: 10px;
+  padding-left: 26px;
+}
+
+.user-menu__login-enter-link span {
+  padding-right: 12px;
+  color: #c5c5c5;
+}
+
+.user-menu__login-name {
+  width: 299px;
+  padding: 8px 0 10px;
+  font-size: 21px;
+  font-weight: 400;
+  color: #000000;
+  background: #ffffff;
+}
+
+.user-menu__login-info--hidden {
+  display: flex;
+}
+
+.user-menu__login-info {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.icon-user {
+  padding-right: 11px;
+  padding-left: 5px;
+}
+
+.icon-logout {
+  padding-left: 26px;
+}
+
+.user-menu__login-info-list {
+  display: flex;
+  margin-top: 8px;
+  justify-content: flex-start;
+}
+
+.user-menu__login-info-item {
+  margin-left: 16px;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+  color: #32425c;
+  text-decoration: underline;
+}
+
+.user-menu__login-info-item:last-child {
+  margin-left: 33px;
+  list-style-type: disc;
+}
+
+.menu-navigation {
+  min-width: 940px;
+  margin-bottom: 60px;
+  background: #32425c;
+  box-shadow: 0 5px 0 0 #293449;
+}
+
 .menu-navigation__list {
   display: flex;
-  width: 960px;
+  margin-left: 20px;
+  margin-right: 25px;
   justify-content: space-around;
-  background: #293449;
+  color: #000000;
 }
 
 .menu-navigation__item {
+  padding-top: 20px;
+  padding-bottom: 18px;
   font-size: 17px;
   line-height: 17px;
   font-weight: 400;
@@ -216,41 +357,206 @@ header {
 
 /*====================INDEX MAIN===========================*/
 
+.item-new::before {
+  content: "new";
+  position: absolute;
+  width: 94px;
+  top: 8px;
+  left: 235px;
+  padding: 5px 0;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+  text-align: center;
+  background: #ee3643;
+  transform: rotate(45deg);
+}
+
+
 
 .sub-menu {
   display: flex;
+  margin-top: 60px;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
 .category {
   width: 100%;
-}
-
-.category__list {
-  display: flex;
-  justify-content: space-between;
-}
-
-.category__item,
-.sale__item {
-  font-size: 24px;
-  line-height: 30px;
-  font-weight: 700;
-  color: #000000;
-}
-
-.slider {
-  width: 620px;
-}
-
-.slider--hidden {
-  display: none;
+  margin-bottom: 20px;
 }
 
 .sale {
   display: flex;
   width: 300px;
+  margin-left: 20px;
+}
+
+.category__list {
+  display: flex;
+  justify-content: space-between;
+  color: #000000;
+}
+
+.category__item,
+.sale__item {
+  position: relative;
+  width: 300px;
+  padding: 17px 135px 17px 24px;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 700;
+  color: #ffffff;
+  text-align: left;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.category__item:first-child {
+  background: #f6b22d;
+  background-image: url(../img/materials.png);
+  background-repeat: no-repeat;
+  background-position: 85%;
+}
+
+.category__item:nth-child(2) {
+  background: #4aafde;
+  background-image: url(../img/instr.png);
+  background-repeat: no-repeat;
+  background-position: 85%;
+
+}
+
+.category__item:last-child {
+  background: #cc79d1;
+  background-image: url(../img/techn.png);
+  background-repeat: no-repeat;
+  background-position: 85%;
+}
+
+.category__item-link,
+.sale__item-link {
+  display: block;
+  width: 135px;
+  margin-top: 17px;
+  padding: 12px 0;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  box-sizing: border-box;
+}
+
+.sale__item:first-child {
+  margin-bottom: 20px;
+  background: #85d179;
+  background-image: url(../img/sale.png);
+  background-repeat: no-repeat;
+  background-position: 85%;
+}
+
+.sale__item:last-child {
+  background: #f6b22d;
+  background-image: url(../img/delivery-icon.png);
+  background-repeat: no-repeat;
+  background-position: 85%;
+}
+
+.slider {
+  position: relative;
+  display: flex;
+  width: 620px;
+}
+
+.slider input[type="radio"] {
+  display: none;
+}
+
+#btn-1:checked~.slider__inner .slider__inner-content:first-child,
+#btn-2:checked~.slider__inner .slider__inner-content:last-child {
+  display: flex;
+}
+
+.slider__inner {
+  width: 100%;
+}
+
+.slider__inner-content {
+  display: none;
+  width: 100%;
+  height: 100%;
+  padding-left: 25px;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-content: flex-start;
+  color: #000000;
+  box-sizing: border-box;
+}
+
+.slider__inner-content:first-child {
+  background: #6b5c49 url("../img/slider1.jpg") no-repeat 100%;
+}
+
+.slider__inner-content:last-child {
+  background: #584e44 url("../img/slider2.jpg") no-repeat 100%;
+}
+
+.slider__title {
+  width: 100%;
+  margin: 24px 0 15px;
+  font-size: 36px;
+  line-height: 30px;
+  font-weight: 700;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+.slider__subtitle {
+  width: 100%;
+  margin: 0;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #ffffff;
+}
+
+.controls {
+  position: absolute;
+  bottom: 40%;
+  display: flex;
+  width: 100%;
+  padding: 0 25px;
+  justify-content: space-between;
+  color: #000000;
+  box-sizing: border-box;
+}
+
+.controls__btn label {
+  font-size: 45px;
+  line-height: 18px;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.slider__link {
+  width: 195px;
+  margin-top: 107px;
+  padding: 10px 0;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: #ffffff;
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: 3px;
+  background: #ee3643;
+  box-sizing: border-box;
+  cursor: pointer;
 }
 
 .popular-product__title {
@@ -679,3 +985,65 @@ h1 {
   font-weight: 400;
 }
 ======================================================================================================================================================= */
+
+
+/*======================  ICONS  =======================================*/
+
+
+@font-face {
+  font-weight: normal;
+  font-style: normal;
+
+  font-family: "symbols-technomart";
+  src: url("../fonts/symbols-technomart.woff") format("woff"),
+       url("../fonts/symbols-technomart.woff2") format("woff2");
+}
+
+[class^="icon-"]::before,
+[class*=" icon-"]::before {
+  display: inline-block;
+  width: 1em;
+  margin-right: 0.2em;
+  margin-left: 0.2em;
+
+  font-weight: normal;
+  line-height: 1em;
+  font-family: "symbols-technomart";
+  text-align: center;
+  text-transform: none;
+  text-decoration: inherit;
+  font-style: normal;
+  font-variant: normal;
+
+  speak: none;
+}
+
+.icon-left::before { content: "\3c"; } /* "&lt;" */
+.icon-right::before { content: "\3e"; } /* "&gt;" */
+.icon-basket::before { content: "\62"; } /* "b" */
+.icon-facebook::before { content: "\66"; } /* "f" */
+.icon-twitter::before { content: "\74"; } /* "t" */
+.icon-vk::before { content: "\76"; } /* "v" */
+.icon-up::before { content: "\2c4"; } /* "˄" */
+.icon-down::before { content: "\2c5"; } /* "˅" */
+.icon-left-big::before { content: "\2190"; } /* "←" */
+.icon-right-big::before { content: "\2192"; } /* "→" */
+.icon-login::before { content: "\2386"; } /* "⎆" */
+.icon-logout::before { content: "\241b"; } /* "␛" */
+.icon-up-dir::before { content: "\25b2"; } /* "▲" */
+.icon-down-dir::before { content: "\25bc"; } /* "▼" */
+.icon-circle::before { content: "\25cb"; } /* "○" */
+.icon-circle-dot::before { content: "\25cf"; } /* "●" */
+.icon-star::before { content: "\2605"; } /* "★" */
+.icon-check-off::before { content: "\2610"; } /* "☐" */
+.icon-check-on::before { content: "\2611"; } /* "☑" */
+.icon-youtube::before { content: "\f39e"; } /* "" */
+.icon-home::before { content: "🏠"; } /* "\1f3e0" */
+.icon-user::before { content: "👨"; } /* "\1f468" */
+.icon-phone::before { content: "📞"; } /* "\1f4de" */
+.icon-instagramm::before { content: "📷"; } /* "\1f4f7" */
+.icon-search::before { content: "🔍"; } /* "\1f50d" */
+.icon-bookmark::before { content: "🔖"; } /* "\1f516" */
+
+
+/*=======================================================================*/
