--- a/css/style.css
+++ b/css/style.css
@@ -794,6 +794,7 @@ input[type="radio"] {
 }
 
 .service__submenu {
+  position: relative;
   display: flex;
   width: 100%;
   margin-top: 63px;
@@ -832,6 +833,17 @@ input:checked~.service__submenu-list .service__submenu-item:first-child label,
 #guarant:checked~.service__submenu-detals .service__features:nth-child(2),
 #credit:checked~.service__submenu-detals .service__features:last-child {
   display: flex;
+}
+
+.service__submenu-list::before {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 272px;
+  top: -35px;
+  left: 231px;
+  background: url("../img/shadow-submenu.png");
+  z-index: 1;
 }
 
 .service__submenu-detals {
@@ -1016,6 +1028,24 @@ input:checked~.service__submenu-list .service__submenu-item:first-child label,
   background: #32425c;
 }
 
+.footer-top__menu {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.logo__title--footer {
+  height: 63px;
+  font-size: 30px;
+  line-height: 120%;
+  padding: 15px 0;
+  box-sizing: border-box;
+}
+
+.footer-top__menu-nav {
+  margin-top: 38px;
+}
+
 .footer-top__menu-list {
   display: flex;
   width: 547px;
@@ -1023,14 +1053,29 @@ input:checked~.service__submenu-list .service__submenu-item:first-child label,
 }
 
 .footer-top__menu-item {
+  margin-right: 59px;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
   color: #ffffff;
 }
 
+.footer-top__menu-item:last-child,
+.footer-top__submenu-item:last-child {
+  margin-right: 0;
+}
+
+.footer-top__submenu {
+  display: flex;
+  width: 100%;
+  margin-top: 32px;
+  margin-bottom: 50px;
+  justify-content: space-between;
+}
+
 .footer-top__adress {
   width: 322px;
+  margin: 0;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
@@ -1045,6 +1090,7 @@ input:checked~.service__submenu-list .service__submenu-item:first-child label,
 }
 
 .footer-top__submenu-item {
+  margin-right: 60px;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
@@ -1052,11 +1098,12 @@ input:checked~.service__submenu-list .service__submenu-item:first-child label,
 }
 
 .footer-bottom {
+  padding: 20px 0;
   background: #293449;
 }
 
 .footer-bottom__copyright {
-  width: 230px;
+  width: 232px;
   font-size: 16px;
   line-height: 18px;
   font-weight: 400;
@@ -1068,11 +1115,34 @@ input:checked~.service__submenu-list .service__submenu-item:first-child label,
 }
 
 .footer-bottom__social {
+  display: flex;
   width: 135px;
+  margin-left: 70px;
+  justify-content: space-between;
+  align-items: center;
+  color: #000000;
+}
+
+.footer-bottom__social-link {
+  display: block;
+  width: 42px;
+  height: 42px;
+  font-size: 0;
+  text-align: center;
+  border-radius: 50%;
+  background: #212a3a;
+}
+
+.footer-bottom__social-link span {
+  font-size: 18px;
+  line-height: 36px;
+  font-weight: 700;
+  color: #ffffff;
 }
 
 .footer-bottom__feedback {
   width: 137px;
+  align-self: center;
   font-size: 16px;
   line-height: 18px;
   font-weight: 400;
@@ -1080,6 +1150,7 @@ input:checked~.service__submenu-list .service__submenu-item:first-child label,
 }
 
 .footer-bottom__feedback-text {
+  margin: 0;
   color: #ffffff;
 }
 
@@ -1089,9 +1160,11 @@ input:checked~.service__submenu-list .service__submenu-item:first-child label,
 
 .footer-bottom__developer {
   width: 100px;
+  align-self: center;
 }
 
 .footer-bottom__developer-text {
+  margin: 0;
   color: #ffffff;
 }
 
